# AtomicIP-

./: .clippy-configured.txt  COMPILATION_REPORT.md  FIXES_APPLIED.md  MIGRATION.md  MULTI_CURRENCY_IMPLEMENTATION.md  README.md  SECURITY.md  SECURITY_DEPLOYMENT_SUMMARY.md  TODO_ISSUES.md  cliff.toml  fix_contracts.py  fix_contracts2.py
.github/workflows/: ci.yml  deploy-testnet.yml  release.yml  test.yml
api-server/: Cargo.toml
api-server/src/: auth.rs  handlers.rs  main.rs  metrics.rs  rate_limit.rs  schemas.rs  webhook.rs
client/: README.md  package.json
contracts/atomic_swap/: Cargo.toml
contracts/atomic_swap/src/: basic_tests.rs  errors.rs  lib.rs  multi_currency.rs  multi_currency_tests.rs  prop_tests.rs  registry.rs  regression_tests.rs  swap.rs  tests.rs  tests_simple.rs  types.rs  utils.rs  validation.rs
contracts/atomic_swap/test_snapshots/basic_tests/tests/: test_cancel_swap_emits_event.1.json  test_escrow_held_on_accept_released_on_reveal.1.json  test_escrow_refunded_on_cancel_expired_swap.1.json  test_full_swap_lifecycle_initiate_accept_reveal_completed.1.json  test_initiate_swap_records_seller_correctly.1.json  test_initiate_swap_rejects_non_owner_seller.1.json  test_initiate_swap_with_non_existent_ip_id_panics.1.json  test_initiate_swap_without_initialize_rejected.1.json  test_reveal_key_emits_event.1.json  test_reveal_key_invalid_key_rejected.1.json  test_reveal_key_valid_key_completes_swap.1.json  test_unauthorized_cancel_rejected.1.json  test_unauthorized_reveal_key_rejected.1.json
contracts/atomic_swap/test_snapshots/tests/: duplicate_swap_rejected_while_active.1.json  new_swap_allowed_after_cancel.1.json  new_swap_allowed_after_complete.1.json  non_owner_cannot_initiate_swap.1.json  test_multiple_ttl_extensions_during_swap_lifecycle.1.json  test_ttl_extension_after_swap_acceptance.1.json  test_ttl_extension_after_swap_cancellation.1.json  test_ttl_extension_after_swap_completion.1.json  test_ttl_extension_after_swap_initiation.1.json  zero_price_rejected.1.json
contracts/atomic_swap/test_snapshots/tests/tests/: test_multiple_ttl_extensions_during_swap_lifecycle.1.json  test_protocol_config_is_cached_in_instance_storage.1.json  test_protocol_config_update_invalidates_cache.1.json  test_ttl_extension_after_swap_acceptance.1.json  test_ttl_extension_after_swap_cancellation.1.json  test_ttl_extension_after_swap_completion.1.json
contracts/atomic_swap/tests/: testnet_integration.rs
contracts/ip_registry/src/: basic_tests.rs  errors.rs  lib.rs  test.rs  tests.rs  tests_simple.rs  types.rs  validation.rs
docs/: api-reference.md  atomic-swap.md  changelog-format.md  commitment-scheme.md  deployment-guide.md  integration-guide.md  metadata-schema.md  openapi.yaml  partial-disclosure.md  regression-test-process.md  security-audit-checklist.md  security.md  testnet-guide.md  threat-model.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_batch_commitments.rs  fuzz_verify_commitment.rs
scripts/: deploy_testnet.sh
(+24 files in other folders)
