[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
jsonwebtoken = "9"
chrono = "0.4"
ed25519-dalek = "2"
stellar-strkey = "0.0.8"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
once_cell = "1"
tower = "0.4"
