[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
http-body-util = "0.1"
once_cell = "1"
