[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }
ip_registry = { path = "../ip_registry" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
ip_registry = { path = "../ip_registry", features = ["testutils"] }
proptest = { version = "1", default-features = false, features = ["std"] }
